--- a/Documentation/html/class_atom_s_o.html
+++ b/Documentation/html/class_atom_s_o.html
@@ -99,7 +99,9 @@ List&lt; int &gt;&#160;</td><td class="memItemRight" valign="bottom"><b>Shells</
 Color32&#160;</td><td class="memItemRight" valign="bottom"><b>atomColor</b></td></tr>
 <tr class="separator:aac5e524c3e09e38c14bafe81bb2c08b8"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
-<hr/>The documentation for this class was generated from the following file:<ul>
+<a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
+<div class="textblock"><p >Scriptable object containing relevant information for Atom Objects </p>
+</div><hr/>The documentation for this class was generated from the following file:<ul>
 <li>Krypton/Assets/Scripts/SO/AtomSO.cs</li>
 </ul>
 </div><!-- contents -->
