--- a/Documentation/html/class_look_at_camera.html
+++ b/Documentation/html/class_look_at_camera.html
@@ -91,7 +91,9 @@ Private Attributes</h2></td></tr>
 Transform&#160;</td><td class="memItemRight" valign="bottom"><b>target</b></td></tr>
 <tr class="separator:a4d8b681b23f1d410b848eac828ff5de9"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
-<hr/>The documentation for this class was generated from the following file:<ul>
+<a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
+<div class="textblock"><p >Looks at Camera </p>
+</div><hr/>The documentation for this class was generated from the following file:<ul>
 <li>Krypton/Assets/Scripts/Utility/LookAtCamera.cs</li>
 </ul>
 </div><!-- contents -->
